# ChangeLog for dev-ruby/net-ssh
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/net-ssh/ChangeLog,v 1.93 2011/08/26 06:24:44 graaff Exp $

*net-ssh-2.2.1 (26 Aug 2011)

  26 Aug 2011; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.2.1.ebuild:
  Version bump.

*net-ssh-2.2.0 (18 Aug 2011)

  18 Aug 2011; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.2.0.ebuild:
  Version bump.

  07 Aug 2011; Diego E. Pettenò <flameeyes@gentoo.org> net-ssh-2.1.4.ebuild:
  Add missing dependency over virtual/ruby-ssl.

  04 Jun 2011; Raúl Porcel <armin76@gentoo.org> net-ssh-2.1.3.ebuild:
  ia64 stable wrt #321103

  26 May 2011; Markus Meier <maekke@gentoo.org> net-ssh-2.1.3.ebuild:
  x86 stable, bug #321103

  07 May 2011; Hans de Graaff <graaff@gentoo.org> net-ssh-2.1.3.ebuild:
  Relax test-unit dependency a bit to include the revision that is marked
  stable.

  04 May 2011; Christoph Mende <angelos@gentoo.org> net-ssh-2.1.3.ebuild:
  Stable on amd64 wrt bug #321103

  04 May 2011; Hans de Graaff <graaff@gentoo.org> -net-ssh-2.0.24.ebuild,
  -net-ssh-2.1.0.ebuild, -net-ssh-2.1.2.ebuild:
  Remove old versions.

  04 May 2011; Hans de Graaff <graaff@gentoo.org> net-ssh-2.1.3.ebuild:
  Drop ruby19 to create a new stable candidate.

*net-ssh-2.1.4 (10 Apr 2011)

  10 Apr 2011; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.1.4.ebuild:
  Version bump.

*net-ssh-2.1.3 (03 Mar 2011)

  03 Mar 2011; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.1.3.ebuild:
  Version bump.

*net-ssh-2.1.2 (02 Mar 2011)

  02 Mar 2011; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.1.2.ebuild:
  Version bump.

  27 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> net-ssh-2.1.0.ebuild:
  Marked ~ppc64 wrt #351729

*net-ssh-2.1.0 (20 Jan 2011)

  20 Jan 2011; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.1.0.ebuild:
  Version bump.

*net-ssh-2.0.24 (15 Jan 2011)

  15 Jan 2011; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.0.24.ebuild: