@@ -1,18 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST method_source-0.6.5.gem 9216 RMD160 a50073f0eff4ba2b15c2d054a3504d91bc8b4c92 SHA1 3ef15705a158320de42fd91c7c9b8245c262b2e0 SHA256 c29bf3173ad848e6e1768d43232f12a3a95a287878b1ac23d3b99c5e75dc7d2b
-DIST method_source-0.6.6.gem 9728 RMD160 4b61b1372c335ed9f064718c4859aaec54566668 SHA1 faa5e7b48b0c8215eaf104cce33206ed86f934f9 SHA256 88163260208af7c0ffee227f4ce593fc3b2e8c52fd47e041d2a0d5c5bdcb4c63
 DIST method_source-0.6.7.gem 9728 RMD160 de8bfb506aa9715e398aa45bacf411b3b5b1eac3 SHA1 893b52ea4e2de8495c4d01d2c7d948dfe4092152 SHA256 a756ec0a61dbedc95048c8acff641d8cb80075044fb67d2d9754a039bc8c072d
-EBUILD method_source-0.6.5.ebuild 782 RMD160 b336775accfe83cdcf2e196266e4f064467b160c SHA1 56370fca053158fe09d76d104c83b52fcc791ceb SHA256 fbfa8e7003da21ebe7a77583d164dc68edd948b2f5b3293afde693fa58f7c14d
-EBUILD method_source-0.6.6.ebuild 964 RMD160 d3f220cbf42d283fcb995476e8c4d07c4cc4bd00 SHA1 53f29c9af097e91743eae9dac5407112a8868d3e SHA256 6d7b9e308f7de0383f4fcd5bc927f0e510322245dcb9047d74e25833edb032a4
 EBUILD method_source-0.6.7.ebuild 822 RMD160 46faa9b88e75c8c60ee0aa7547c5701b56340588 SHA1 b758ae9b107dbd64bba2a18051def5ba9914bc2b SHA256 ab12ff84d9e99d4832ac3d30c2d708e52ba0cc8c6e3a42af85b6dacab09dff9a
-MISC ChangeLog 673 RMD160 e2a564b139b9ae915e101acaa4b5c214b60f1d45 SHA1 906a4ee35e02225ada379520ba620ecea3b7df51 SHA256 b1fb4b9c629a86dd99ad6bbc0c1057457930494d5793b6692f3ffb219f9cf315
+MISC ChangeLog 807 RMD160 fa9c9e3b7cee0a86f527e3948c0f3b53fdd71601 SHA1 39f21b4dc36c73e2df3139fa8308448b4500fca7 SHA256 72c9ce3b3b39cc8477d9bada8815d06ac01ce30505544a70d83a3958a7992bc0
 MISC metadata.xml 159 RMD160 e6b7ca92e6c0fc796353896e830687ec51efbaf5 SHA1 96f46f7af5d8526b778e417be3c3d2f8ae5be274 SHA256 5fd95e97ccf4410cb31431d51fb5d62baef04eaa59e4f0ad6d1b43c03111d8d0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk7uKKMACgkQiIP6VqMIqNeiZAD7B7YY0tFxjzrjZLtiHdZhlpQJ
-eCpznEN1jGhVVu5Az3QBAJR21MewtN9POArGDAEkv5qqQnwuuutFZIgSFrcUiVsH
-=arFW
+iF4EAREIAAYFAk761FsACgkQiIP6VqMIqNf1vAD/UVDSE9/u+T9Cs/6jEwzzbRxy
+juBUyKbe2OxgAshF+VMBAIJ1sDi9W+hk11P+H+DTQ897+gH//tP4DS0bSWJDhxxm
+=tI+u
 -----END PGP SIGNATURE-----
