@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/net-ssh
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/net-ssh/ChangeLog,v 1.93 2011/08/26 06:24:44 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/net-ssh/ChangeLog,v 1.94 2011/12/28 08:29:42 graaff Exp $
+
+  28 Dec 2011; Hans de Graaff <graaff@gentoo.org> net-ssh-2.0.23.ebuild:
+  Drop ruby19 from stable version.
 
 *net-ssh-2.2.1 (26 Aug 2011)
 
